# richman

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
docs/: DEVELOPMENT_PROGRESS.md  GAME_RULES.md  MODULE_DESIGN.md  TUI_DESIGN.md  TUI_NEXT_STEPS.md
openspec/changes/implement-app-module/: tasks.md
openspec/specs/app-assembly/: spec.md
openspec/specs/board-spatial-model/: spec.md
openspec/specs/engine-bankruptcy/: spec.md
openspec/specs/engine-core/: spec.md
openspec/specs/engine-landing/: spec.md
openspec/specs/engine-turn-flow/: spec.md
openspec/specs/engine-view-generation/: spec.md
openspec/specs/game-domain-model/: spec.md
openspec/specs/player-decision-model/: spec.md
openspec/specs/project-development-environment/: spec.md
openspec/specs/render-adapter-architecture/: spec.md
openspec/specs/rules-engine/: spec.md
openspec/specs/tui-action-bar/: spec.md
openspec/specs/tui-app-entry/: spec.md
openspec/specs/tui-board-layout-calculation/: spec.md
openspec/specs/tui-board-widget/: spec.md
openspec/specs/tui-demolish-target-flow/: spec.md
openspec/specs/tui-event-line/: spec.md
openspec/specs/tui-game-screen/: spec.md
src/richman/: __init__.py  __main__.py  app.py  cli.py
tests/: test_app.py  test_board.py  test_cli.py  test_domain_models.py  test_engine.py  test_engine_step.py  test_imports.py  test_player.py  test_render.py  test_rules.py  test_textual_tui.py  test_textual_tui_app.py  test_textual_tui_event_line.py  test_textual_tui_game_screen.py  test_textual_tui_layout.py  test_textual_tui_player_strip.py
(+121 files in other folders)
