[project]
name = "richman"
version = "0.1.0"
description = "A terminal-first Monopoly-style game with pluggable render adapters."
requires-python = ">=3.13"
authors = [
  { name = "Richman contributors" },
]
dependencies = [
  "rich>=14.0.0",
  "textual>=6.0.0",
  "typer>=0.19.0",
]

[project.scripts]
richman = "richman.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.18.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/richman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
